Fix next button not working on tablets

--- a/app/assets/stylesheets/hnhiring.css.scss
+++ b/app/assets/stylesheets/hnhiring.css.scss
@@ -188,6 +188,7 @@ a.next.btn {
   max-width: 500px;
   font-size: 18px;
   text-align: center;
+  display: block;
 }
 
 a.next.btn:hover {
